oc/04-wordpress/030-Deployement.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: wordpress-openshift-app
  labels:
    app: wordpress-openshift-app
    app.kubernetes.io/part-of: wordpress-openshift-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress-openshift-app
  template:
    metadata:
      labels:
        app: wordpress-openshift-app
    spec:
      containers:
      - name: wordpress-openshift-app
        image: bitnami/wordpress:latest # Bitnami WordPress ist Non-Root und super
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: 
          limits:
            cpu: '2'
            memory: 512Mi
          requests:
            cpu: '1'
            memory: 256Mi
        imagePullPolicy: IfNotPresent # Verhindert erneutes Blockieren bei Docker Hub
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: wordpress-openshift-app-database
  labels:
    app: wordpress-openshift-app
    app.kubernetes.io/part-of: wordpress-openshift-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress-openshift-app-database
  template:
    metadata:
      labels:
        app: wordpress-openshift-app-database
    spec:
      volumes:
      - name: wordpress-openshift-app-database-data
        persistentVolumeClaim:
          claimName: wordpress-openshift-app-database-data
      containers:
      - name: wordpress-openshift-app-database
        resources: {}
        ports:
        - containerPort: 3306
          protocol: TCP
        volumeMounts:
        - name: wordpress-openshift-app-database-data
          mountPath: /var/lib/mysql/data # Wichtig für SCL MariaDB Speicherort
        image: quay.io/sclorg/mariadb-1011-c9s:latest # 100% Non-Root & ohne Docker-Hub-Sperre
        imagePullPolicy: Always
